modified background for better performance on slow devices added instructions as "What is this" in the mode view added back button as quit on intro screen disabled screen sleeping in credits and gameplay fixed whitespace

--- a/docs/examples/KrushBlokk/assets/layout/style.css
+++ b/docs/examples/KrushBlokk/assets/layout/style.css
@@ -16,6 +16,11 @@
 	y: 70;
 }
 
+#demo {
+	x: 30;
+	y: 135;
+}
+
 #modeFreeform {
 	x: 16;
 	y: 100;
